--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Hacettepe Üniverstesi İstatistik ve Veri Bilimi Topluluğu</h1>
-    <img src="/Users/emreserhatakkas/Downloads/my-website/1.png" alt="Topluluk Logosu" class="logo">
+    <img src="huistatistik.github.io/1.png" alt="Topluluk Logosu" class="logo">
   </header>
   
 
