--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Hacettepe Üniverstesi İstatistik ve Veri Bilimi Topluluğu</h1>
-    <img src="huistatistik.github.io/1.png" alt="Topluluk Logosu" class="logo">
+    <h1>Hacettepe Üniversitesi İstatistik ve Veri Bilimi Topluluğu</h1>
+    <img src="/1.png" alt="Topluluk Logosu" class="logo">
   </header>
   
 
