--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Hacettepe Üniversitesi İstatistik ve Veri Bilimi Topluluğu</h1>
-    <img src="/Users/emreserhatakkas/Downloads/my-websit/1.png" alt="Topluluk Logosu" class="logo">
+    <img src="/1.png" alt="Topluluk Logosu" class="logo">
   </header>
 
   <nav>
