--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Hacettepe Üniversitesi İstatistik ve Veri Bilimi Topluluğu</h1>
-    <img src="/1.png" alt="Topluluk Logosu" class="logo">
+    <img src="1.png" alt="Topluluk Logosu" class="logo">
   </header>
   
 
